# ENGR151-p2-Card-Game

./: CMakeLists.txt  Changelog  GTK_ENABLED.h  MUL_ENABLED.h  README  README.md  animation.c  animation.h  basic.c  basic.h  card_pile.c  card_pile.h  log.c  log.h  main.c  mgtk.c  mgtk.h
p2_with_GTK/: CMakeLists.txt  GTK_ENABLED.h  README  animation.c  animation.h  basic.c  basic.h  card_pile.c  main.c
